k8s/instagram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: instagram
  name: instagram
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagram
  template:
    metadata:
      labels:
        app: instagram
    spec:
      containers:
      - env: 
        image: us-east1-docker.pkg.dev/hello-world-306210/golang/go-instagram-api
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: instagram
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: instagram
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: instagram
  type: NodePort
