k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: backend
    networking.gke.io/managed-certificates: backend # This must be provisioned before disabling http
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
  name: backend
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: instagram
            port:
              number: 5000
      - path: /graphql
        pathType: ImplementationSpecific
        backend:
          service:
            name: graphql
            port:
              number: 5000
